objects/FLODocs__FLO_Customization__c.object
<CustomObject>
    <description>This record is used to track customizations in the org and tie them to processes.</description>
    <fields>
        <fullName>FLODocs__Actions__c</fullName>
        <description>These are the workflow actions detected in the workflow by the Strongpoint documentation engine.</description>
        <inlineHelpText>These are the workflow actions detected in the workflow by the Strongpoint documentation engine.</inlineHelpText>
        <label>Actions</label>
        <length>31768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FLODocs__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Indicates whether a record is active or not</description>
        <inlineHelpText>Checked means the record is Active, otherwise the record is Inactive</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FLODocs__Add_to_Change_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Change request associated with the customization.</description>
        <inlineHelpText>Change request associated with the customization.</inlineHelpText>
        <label>Add to Change Request</label>
        <referenceTo>FLODocs__FLO_Change_Request__c</referenceTo>
        <relationshipLabel>Customizations (Change Request)</relationshipLabel>
        <relationshipName>Customizations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FLODocs__Alert_Control_Owner__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this box to alert the owner of the control</description>
        <inlineHelpText>Check this box to alert the owner of the control</inlineHelpText>
        <label>Alert Control Owner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FLODocs__Alert_Process_Owner__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This checkbox alerts the process owner whenever an incident is detected</description>
        <inlineHelpText>This checkbox alerts the process owner whenever an incident is detected</inlineHelpText>
        <label>Alert Process Owner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FLODocs__Alert_Task_Message__c</fullName>
        <description>Enter the message you want sent to the assignees on tasks or the recipients of alerts. If blank, the message will be CONTROL INCIDENT: {name of control}</description>
        <inlineHelpText>Enter the message you want sent to the assignees on tasks or the recipients of alerts. If blank, the message will be CONTROL INCIDENT: {name of control}</inlineHelpText>
        <label>Alert / Task Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FLODocs__Amount_of_Lines__c</fullName>
        <label># of Lines</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FLODocs__Archive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is for automated cleanup</description>
        <label>Archive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FLODocs__Attachment_Number_Of_Attempts__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Attachment Number Of Attempts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FLODocs__Attempt__c</fullName>
        <description>This is the number of attempts that Strongpoint scripts parsed this Customization</description>
        <inlineHelpText>This is the number of attempts that Strongpoint scripts parsed this Customization</inlineHelpText>
        <label>Attempt #</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FLODocs__Available_For_Use__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Available For Use</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FLODocs__Average_Runtime__c</fullName>
        <description>Script Average Execution Time in milliseconds</description>
        <inlineHelpText>Script Average Execution Time in milliseconds</inlineHelpText>
        <label>Average Runtime</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FLODocs__Block__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Block</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FLODocs__Bucket_Column_Name__c</fullName>
        <description>This is one or more FLO Customization record representing the bucket columns names fields  for this report.</description>
        <inlineHelpText>This is one or more FLO Customization record representing the bucket columns names fields  for this report.</inlineHelpText>
        <label>Bucket Column Name</label>
        <length>12768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>FLODocs__Bucket__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked means the report has buckets</description>
        <label>Bucket</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FLODocs__Business_Owner_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Business Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Customizations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FLODocs__Business_Status__c</fullName>
        <label>Business Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FLODocs__CPU__c</fullName>
        <description>The CPU time in milliseconds used to complete the request.</description>
        <inlineHelpText>The CPU time in milliseconds used to complete the request.</inlineHelpText>
        <label>CPU Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FLODocs__Change_Detected__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag the customization as changed, this is before the change is actually evaluated</description>
        <inlineHelpText>Flag the customisation as changed, this is before the change is actually evaluated.</inlineHelpText>
        <label>Change Detected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FLODocs__Change_Level__c</fullName>
        <label>Change Level</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FLODocs__Change_Log_Verification__c</fullName>
        <defaultValue>false</defaultValue>
        <description>is used to know if the record pass the change log creation job</description>
        <label>Change Log Verification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FLODocs__Clean_Up_Archived_Date__c</fullName>
        <label>Clean Up Archived Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FLODocs__Clean_Up_Restore_Date__c</fullName>
        <label>Clean Up Restore Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FLODocs__Clean_Up_Retain_Date__c</fullName>
        <label>Clean Up Retain Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FLODocs__Clean_Up_Rule_Name__c</fullName>
        <label>Clean Up Rule Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FLODocs__Clean_up_Classification__c</fullName>
        <description>This field shows an overview of the clean-up classification</description>
        <inlineHelpText>This field shows an overview of the clean-up classification</inlineHelpText>
        <label>Clean-up Classification</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FLODocs__Clean_up_Status__c</fullName>
        <description>This is the clean-up status of customizations that you plan to eliminate.</description>
        <inlineHelpText>This is the clean-up status of customizations that you plan to eliminate.</inlineHelpText>
        <label>Clean-up Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>FLODocs__FLO_Clean_Up_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>FLODocs__Comment_Line_Ratio__c</fullName>
        <description>This is the ratio of comments to lines which is an indicator or the quality of the documentation.</description>
        <inlineHelpText>This is the ratio of comments to lines which is an indicator or the quality of the documentation.</inlineHelpText>
        <label>Comment / Line Ratio</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FLODocs__Compliance_Group__c</fullName>
        <label>Compliance Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FLODocs__Conditions__c</fullName>
        <description>These are the conditions in the workflow organized by stage or action.</description>
        <inlineHelpText>These are the conditions in the workflow organized by stage or action.</inlineHelpText>
        <label>Conditions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FLODocs__Control_Asignee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Set this field to assign the tasks, issue or alerts to someone other than the owner. If blank, the control alerts or assign tasks etc to the owner.</description>
        <inlineHelpText>Set this field to assign the tasks, issue or alerts to someone other than the owner. If blank, the control alerts or assign tasks etc to the owner.</inlineHelpText>
        <label>Control Asignee</label>
        <referenceTo>User</referenceTo>
        <relationshipName>FLO_Customizations2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FLODocs__Control_Count__c</fullName>
        <description>This is a custom field created for your account. Contact your administrator for details.</description>
        <inlineHelpText>This is a custom field created for your account. Contact your administrator for details.</inlineHelpText>
        <label>Control Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FLODocs__Control_Error_Warning__c</fullName>
        <description>Error(s) / Warning(s) encountered when the Control was run. If blank, there were no problems encountered.</description>
        <inlineHelpText>Error(s) / Warning(s) encountered when the Control was run. If blank, there were no problems encountered.</inlineHelpText>
        <label>Control Error / Warning</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FLODocs__Control_Frequency__c</fullName>
        <description>This is the frequency at which a control should be checked from Hourly, Daily, Weekly, Monthly or Yearly. Controls can be monitored to ensure that they are checked every period.</description>
        <inlineHelpText>This is the frequency at which a control should be checked from Hourly, Daily, Weekly, Monthly or Yearly. Controls can be monitored to ensure that they are checked every period.</inlineHelpText>
        <label>Control Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Hourly</fullName>
                </value>
                <value>
                    <fullName>Daily</fullName>
                    <default>true</default>
                    <label>Daily</label>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Yearly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FLODocs__Control_Type__c</fullName>
        <description>This field is optional. Select Count to record the number</description>
        <inlineHelpText>This field is optional. Select Count to record the number</inlineHelpText>
        <label>Control Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>LOG</fullName>
                </value>
                <value>
                    <fullName>ISSUE</fullName>
                </value>
                <value>
                    <fullName>TASK</fullName>
                </value>
                <value>
                    <fullName>STORE DATA</fullName>
                </value>
                <value>
                    <fullName>COUNT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FLODocs__Control__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Determine if the customization is a control</description>
        <inlineHelpText>Determine if the customization is a control</inlineHelpText>
        <label>Control</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FLODocs__Controlled_Process__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is the process that this customization controls.</description>
        <inlineHelpText>This is the process that this customization controls.</inlineHelpText>
        <label>Controlled Process</label>
        <referenceTo>FLODocs__FLO_Process__c</referenceTo>
        <relationshipLabel>Customizations</relationshipLabel>
        <relationshipName>FLO_Customizations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FLODocs__Custom_Profile__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox to indicate whether if the profile is a custom creation or if it is standard</description>
        <inlineHelpText>Checkbox to indicate whether if the profile is a custom creation or if it is standard</inlineHelpText>
        <label>Custom Profile</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FLODocs__Custom_Record_ID__c</fullName>
        <description>This is the custom object name of the relevant custom object for this report - used to join a report to a custom object.</description>
        <inlineHelpText>This is the custom object name of the relevant custom object for this report - used to join a report to a custom object.</inlineHelpText>
        <label>Report Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FLODocs__Customization_Created_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>User creator of the Customization</description>
        <inlineHelpText>User creator of the Customization</inlineHelpText>
        <label>Customization Created By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>FLO_Customizations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FLODocs__Customization_Created_Date__c</fullName>
        <description>Created date of the Customization record.</description>
        <inlineHelpText>Created date of the Customization record.</inlineHelpText>
        <label>Customization Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FLODocs__Customization_Last_Modified_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Last user who has modified the customizaiton</description>
        <inlineHelpText>Last user who has modified the customizaiton</inlineHelpText>
        <label>Customization Last Modified By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>FLO_Customizations1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FLODocs__DLU_Status__c</fullName>
        <label>DLU Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>FLODocs__Strongpoint_DLU_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>FLODocs__Data_Change_Tracking__c</fullName>
        <description>Valid only for CustomObject, CustomField, and CustomObject data records. Determines how changes to data records are handled by Strongpoint.</description>
        <inlineHelpText>Not Tracked: changes in data records are not tracked by Strongpoint
Tracked, Blocking: changes in data records are blocked if there is no approved Change Request
Tracked, Non-Blocking: changes in data records are logged by Strongpoint</inlineHelpText>
        <label>Data Change Tracking</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Tracked</fullName>
                    <default>true</default>
                    <label>Not Tracked</label>
                </value>
                <value>
                    <fullName>Tracked, Blocking</fullName>
                </value>
                <value>
                    <fullName>Tracked, Non-Blocking</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FLODocs__Data_Owner_Public_group__c</fullName>
        <description>Data Owner Public group</description>
        <inlineHelpText>Data Owner Public group</inlineHelpText>
        <label>Data Owner Public group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FLODocs__Data_Source_es__c</fullName>
        <description>This is one or more FLO Customization record representing the data source(s) for this field.</description>
        <inlineHelpText>This is one or more FLO Customization record representing the data source(s) for this field.</inlineHelpText>
        <label>Data Source(es)</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>FLODocs__Data_Type__c</fullName>
        <inlineHelpText>This is the data type of any custom field</inlineHelpText>
        <label>Data Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FLODocs__Date_DLU_Analyzed__c</fullName>
        <label>Date DLU Analyzed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FLODocs__Date_Last_Used__c</fullName>
        <description>This is the date that this customization was last used. Note: Used for objects such as CustomField, CustomObject, Apex (EventLogFile needs to be purchased), EmailTemplate, Reports, Dashboards, Document.</description>
        <inlineHelpText>This is the date that this customization was last used. Note: Used for particular objects such as CustomField, CustomObject, Apex (EventLogFile needs to be purchased), EmailTemplate, Reports, Dashboards, Document.</inlineHelpText>
        <label>Date Last Used</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FLODocs__Days_Difference_Today_DLU__c</fullName>
        <formula>TODAY() - FLODocs__Date_Last_Used__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Difference Today DLU</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FLODocs__Dependencies_DLU__c</fullName>
        <label>Dependency DLU</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FLODocs__Dependent_Fields2__c</fullName>
        <label>Dependent Field 2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FLODocs__Dependent_Fields__c</fullName>
        <label>Dependent Field</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FLODocs__Description__c</fullName>
        <description>This is the description from the customization record.</description>
        <inlineHelpText>This is the description from the customization record.</inlineHelpText>
        <label>Description</label>
        <length>1003</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FLODocs__Employee_using_this_customization__c</fullName>
        <description>Users using this customization ( Note: Retrieved for Apex Scripts when EventLogFile object is available)</description>
        <inlineHelpText>Users using this customization ( Note: Retrieved for Apex Scripts when EventLogFile b is available)</inlineHelpText>
        <label>Employee using this customization</label>
        <length>10000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>FLODocs__Enable_Track_History_Field__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field enables the tracking of the changes of the selected record if it is of type &apos;CustomField&apos;</description>
        <inlineHelpText>This field enables the tracking of the changes of the selected record if it is of type &apos;CustomField&apos;</inlineHelpText>
        <label>Enable Track History Field</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FLODocs__Encoded_API_Name__c</fullName>
        <description>This field will be used by Strongpoint to make the retrieve with Encoded API Name.</description>
        <inlineHelpText>This field will be used by Strongpoint to make the retrieve with Encoded API Name.</inlineHelpText>
        <label>Encoded API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FLODocs__Extended_Types_Fields_Raw__c</fullName>
        <description>CSV of fields used by this customization: FieldSet, Groups, SharingRules, etc etc</description>
        <inlineHelpText>CSV of fields used by this customization: FieldSet, Groups, SharingRules, etc etc</inlineHelpText>
        <label>Extended Types Fields Raw</label>
        <length>45000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FLODocs__Extended_Types_Other__c</fullName>
        <description>These are the types that depend upon this field. (e.g: HomePageComponent, Queues, AnalyticSnapshot, etc)</description>
        <inlineHelpText>These are the types that depend upon this field. (e.g: HomePageComponent, Queues, AnalyticSnapshot, etc)</inlineHelpText>
        <label>Extended Types (Other)</label>
        <length>17100</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>FLODocs__Extended_Types_fields__c</fullName>
        <description>These are the fields used in Extended Types (e.g: AnalyticSnapshot, PathAssistant, WebLink, etc)</description>
        <inlineHelpText>These are the fields used in Extended Types (e.g: AnalyticSnapshot, PathAssistant, WebLink, etc)</inlineHelpText>
        <label>Extended Types fields</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FLODocs__Extension_field__c</fullName>
        <description>Contains custom fields used in a script, along with its variable declaration:
&lt;Object&gt;.&lt;Custom Field&gt;:&lt;variable name&gt;</description>
        <inlineHelpText>Contains custom fields used in a script, along with its variable declaration:
&lt;Object&gt;.&lt;Custom Field&gt;:&lt;variable name&gt;</inlineHelpText>
        <label>Extension field</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FLODocs__FLO_Change_Approval_Policy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field designates the approval policy and change management path relating to this customization.  If not specified, the policy from any related process applies.  Otherwise the default policy applies.</description>
        <inlineHelpText>This field designates the approval policy and change management path relating to this customization.  If not specified, the policy from any related process applies.  Otherwise the default policy applies.</inlineHelpText>
        <label>Change / Approval Policy</label>
        <referenceTo>FLODocs__FLO_Change_Approval_Policy__c</referenceTo>
        <relationshipLabel>Customizations</relationshipLabel>
        <relationshipName>FLO_Customizations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FLODocs__FLO_Scanner_Log__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the Strongpoint representation of a Metadata Type</description>
        <inlineHelpText>Lookup to the Strongpoint representation of a Metadata Type</inlineHelpText>
        <label>Scanner Log</label>
        <referenceTo>FLODocs__FLO_Scanner_Log__c</referenceTo>
        <relationshipLabel>Customizations</relationshipLabel>
        <relationshipName>FLO_Customizations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FLODocs__Field_History__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable Field History</description>
        <inlineHelpText>Check this box if you want to enable Field History tracking</inlineHelpText>
        <label>Field History</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FLODocs__Filtered_Data_Records__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The tracked Object&apos;s data records that this Report filters.</description>
        <inlineHelpText>The tracked Object&apos;s data records that this Report filters.</inlineHelpText>
        <label>Filtered Data Records</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>FLODocs__FLO_Customization__c.FLODocs__Salesforce_Types__c</field>
                <operation>equals</operation>
                <value></value>
            </filterItems>
            <filterItems>
                <field>FLODocs__FLO_Customization__c.FLODocs__SObject_Type_Label__c</field>
                <operation>notEqual</operation>
                <value></value>
            </filterItems>
            <infoMessage>Select the Data Records for which this Customization acts as a filter.</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>FLODocs__FLO_Customization__c</referenceTo>
        <relationshipLabel>Change Log Filters</relationshipLabel>
        <relationshipName>Change_Log_Filter_Reports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FLODocs__Filters__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Filters</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FLODocs__Folder_File_Name__c</fullName>
        <description>Name of the Folder and File where Salesforce has the Metadata Component</description>
        <inlineHelpText>Name of the Folder and File where Salesforce has the Metadata Component</inlineHelpText>
        <label>Folder File Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FLODocs__Form_Fields__c</fullName>
        <description>List of fields used in a ListView,Layout,Form Visualforce type customization.</description>
        <inlineHelpText>List of fields used in a ListView,Layout,Form Visualforce type customization.</inlineHelpText>
        <label>Layout Fields</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FLODocs__Forms__c</fullName>
        <description>List of Layouts in which the customization appear or is used.</description>
        <inlineHelpText>List of Layouts in which the customization appear or is used.</inlineHelpText>
        <label>Layouts</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>FLODocs__Functions__c</fullName>
        <description>List of functions used in the script</description>
        <inlineHelpText>List of functions used in the script</inlineHelpText>
        <label>Functions</label>
        <length>101000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FLODocs__Has_Changed_For_Change_Log_Job__c</fullName>
        <formula>IF(ISNULL(FLODocs__Last_Time_Run_Change_Log_Job__c), true, IF( DATEVALUE(LastModifiedDate ) &gt; DATEVALUE(FLODocs__Last_Time_Run_Change_Log_Job__c), true, false))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Has Changed For Change Log Job</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FLODocs__Has_Changed_For_Junction_Job__c</fullName>
        <formula>IF( ISNULL(FLODocs__Last_Time_Run_Junction_Job__c), true, IF(DATEVALUE(LastModifiedDate) &gt; DATEVALUE(FLODocs__Last_Time_Run_Junction_Job__c), true, false))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Has Changed For Junction Job</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FLODocs__Has_Flow_Conditions_To_Be_Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Flow Conditions To Be Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FLODocs__Help_Text__c</fullName>
        <description>Help Text for a particular customization: specially custom fields</description>
        <label>Help Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FLODocs__Improvement_Comments__c</fullName>
        <description>Use this field to make notes during clean-up and improvements.</description>
        <inlineHelpText>Use this field to make notes during clean-up and improvements.</inlineHelpText>
        <label>Retain Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FLODocs__Incomplete_Object__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked when FLO Customization object is incomplete for Prototype Proposes</description>
        <inlineHelpText>Checked when FLO Customization object is incomplete for Prototype Proposes</inlineHelpText>
        <label>Incomplete Object</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FLODocs__Instructions_for_Resolution__c</fullName>
        <description>Instructions for Resolution text in the alert email.  The user may input a description of the instruction to resolve the incident.</description>
        <inlineHelpText>Instructions for Resolution text in the alert email.  The user may input a description of the instruction to resolve the incident.</inlineHelpText>
        <label>Instructions for Resolution</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FLODocs__Internal_Id__c</fullName>
        <description>Salesforce Id of the customization</description>
        <inlineHelpText>Salesforce Id of the customization</inlineHelpText>
        <label>Internal Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FLODocs__Is_Data_Tracking_Batch__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked if the Standard Object is not triggerable and if Data Change Tracking is enabled. Data record changes cannot be triggered and must be processed via scheduled batch.</description>
        <inlineHelpText>Checked if the Standard Object is not triggerable and if Data Change Tracking is enabled. Data record changes cannot be triggered and must be processed via scheduled batch.</inlineHelpText>
        <label>Is Data Tracking Batch</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FLODocs__Is_Install_Or_PostInstall__c</fullName>
        <defaultValue>false</defaultValue>
        <description>this field is used for install and post install purposes</description>
        <label>Is Install Or PostInstall</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FLODocs__Is_New_Record__c</fullName>
        <description>Field to be used to detect if the record is 100% new. if it is, we will use it into Strongpoint Scanner jobs to retrieve, create customizations etc</description>
        <formula>IF( (LastModifiedDate - CreatedDate) * 24 * 60 &lt; 0.001 , true,false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Field to be used to detect if the record is 100% new. if it is, we will use it into Strongpoint Scanner jobs to retrieve, create customizations etc</inlineHelpText>
        <label>Is New Record</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FLODocs__Junction_Verification__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Junction Verification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FLODocs__Last_Control_Run_Date__c</fullName>
        <description>This is the last date that the control was run.</description>
        <inlineHelpText>This is the last date that the control was run.</inlineHelpText>
        <label>Last Control Run Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FLODocs__Last_Date_Change__c</fullName>
        <label>Last Date Change</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FLODocs__Last_Modified_File_Date__c</fullName>
        <description>Last modified date of the Metadata File.</description>
        <inlineHelpText>Last modified date of the Metadata File.</inlineHelpText>
        <label>Last Modified File Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FLODocs__Last_Modified_File_String__c</fullName>
        <description>String to compare dates to avoid GMT and TimeZones of  users.</description>
        <inlineHelpText>String to compare dates to avoid GMT and TimeZones of  users.</inlineHelpText>
        <label>Last Modified File String</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>